# pergunteme

./: README.md  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
src/accounts/: forms.py  urls.py  views.py
src/config/: settings.py  urls.py
src/questions/: admin.py  forms.py  models.py  urls.py  views.py
src/questions/migrations/: 0001_initial.py
src/static/css/: home.css
src/static/css/account/: explore.css
src/static/css/question/: received_questions.css
src/static/css/registration/: login.css  signup.css
src/templates/: base.html  home.html  navbar.html
src/templates/account/: explore.html  profile.html
src/templates/question/: received_questions.html
src/templates/registration/: login.html  signup.html
templates/: base.html
